Adjust scheme to better defaults While all colors are no longer used, colored text remains colored when bold.

--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -3,24 +3,38 @@
 # Author: {{scheme-author}}
 
 foreground      = #{{base05-hex}}
-foreground_bold = #{{base05-hex}}
-cursor          = #{{base05-hex}}
+foreground_bold = #{{base06-hex}}
+cursor          = #{{base06-hex}}
 background      = #{{base00-hex}}
 
 # 16 color space
+
+# Black, Gray, Silver, White
 color0  = #{{base00-hex}}
-color1  = #{{base08-hex}}
-color2  = #{{base0B-hex}}
-color3  = #{{base0A-hex}}
-color4  = #{{base0D-hex}}
-color5  = #{{base0E-hex}}
-color6  = #{{base0C-hex}}
-color7  = #{{base05-hex}}
 color8  = #{{base03-hex}}
-color9  = #{{base09-hex}}
-color10 = #{{base01-hex}}
-color11 = #{{base02-hex}}
-color12 = #{{base04-hex}}
-color13 = #{{base06-hex}}
-color14 = #{{base0F-hex}}
+color7  = #{{base05-hex}}
 color15 = #{{base07-hex}}
+
+# Red
+color1  = #{{base08-hex}}
+color9  = #{{base08-hex}}
+
+# Green
+color2  = #{{base0B-hex}}
+color10 = #{{base0B-hex}}
+
+# Yellow
+color3  = #{{base0A-hex}}
+color11 = #{{base0A-hex}}
+
+# Blue
+color4  = #{{base0D-hex}}
+color12 = #{{base0D-hex}}
+
+# Purple
+color5  = #{{base0E-hex}}
+color13 = #{{base0E-hex}}
+
+# Teal
+color6  = #{{base0C-hex}}
+color14 = #{{base0C-hex}}
