Add extra 256 colors to match chriskempson/base16-shell's decisions

--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -38,3 +38,12 @@ color13 = #{{base0E-hex}}
 # Teal
 color6  = #{{base0C-hex}}
 color14 = #{{base0C-hex}}
+
+# Extra colors
+color15 = #{{base07-hex}}
+color16 = #{{base09-hex}}
+color17 = #{{base0F-hex}}
+color18 = #{{base01-hex}}
+color19 = #{{base02-hex}}
+color20 = #{{base04-hex}}
+color21 = #{{base06-hex}}
