Add cursor_foreground color
Also provide background color as rgb value, so transparency can easily be
changed.

--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -2,10 +2,11 @@
 # Base16 {{scheme-name}}
 # Author: {{scheme-author}}
 
-foreground      = #{{base05-hex}}
-foreground_bold = #{{base06-hex}}
-cursor          = #{{base06-hex}}
-background      = #{{base00-hex}}
+foreground          = #{{base05-hex}}
+foreground_bold     = #{{base06-hex}}
+cursor              = #{{base06-hex}}
+cursor_foreground   = #{{base00-hex}}
+background          = rgba({{base00-rgb-r}}, {{base00-rgb-g}}, {{base00-rgb-b}})
 
 # 16 color space
 
