Rename organisation from base16-project to tinted-theming

--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -1,6 +1,7 @@
 [colors]
 # Base16 {{scheme-name}}
-# Author: {{scheme-author}}
+# Scheme author: {{scheme-author}}
+# Template author: Tinted Theming (https://github.com/tinted-theming)
 
 foreground          = #{{base05-hex}}
 foreground_bold     = #{{base05-hex}}
