--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -1,5 +1,5 @@
 [colors]
-# Base16 {{scheme-name}}
+# {{scheme-system}} {{scheme-name}}
 # Scheme author: {{scheme-author}}
 # Template author: Tinted Theming (https://github.com/tinted-theming)
 
@@ -12,39 +12,25 @@ background          = #{{base00-hex}}
 # 16 color space
 
 # Black, Gray, Silver, White
-color0  = #{{base00-hex}}
-color8  = #{{base03-hex}}
-color7  = #{{base05-hex}}
-color15 = #{{base07-hex}}
-
-# Red
-color1  = #{{base08-hex}}
-color9  = #{{base08-hex}}
-
-# Green
-color2  = #{{base0B-hex}}
-color10 = #{{base0B-hex}}
-
-# Yellow
-color3  = #{{base0A-hex}}
-color11 = #{{base0A-hex}}
-
-# Blue
-color4  = #{{base0D-hex}}
-color12 = #{{base0D-hex}}
-
-# Purple
-color5  = #{{base0E-hex}}
-color13 = #{{base0E-hex}}
-
-# Teal
-color6  = #{{base0C-hex}}
-color14 = #{{base0C-hex}}
-
-# Extra colors
-color16 = #{{base09-hex}}
-color17 = #{{base0F-hex}}
-color18 = #{{base01-hex}}
-color19 = #{{base02-hex}}
-color20 = #{{base04-hex}}
-color21 = #{{base06-hex}}
+color0  = #{{base00-hex}} # base00 - Black
+color1  = #{{base08-hex}} # base08 - Red
+color2  = #{{base0B-hex}} # base0B - Green
+color3  = #{{base0A-hex}} # base0A - Yellow
+color4  = #{{base0D-hex}} # base0D - Blue
+color5  = #{{base0E-hex}} # base0E - Magenta
+color6  = #{{base0C-hex}} # base0C - Cyan
+color7  = #{{base05-hex}} # base05 - White
+color8  = #{{base02-hex}} # base02 - Bright Black
+color9  = #{{base08-hex}} # base08 - Bright Red
+color10 = #{{base0B-hex}} # base0B - Bright Green
+color11 = #{{base0A-hex}} # base0A - Bright Yellow
+color12 = #{{base0D-hex}} # base0D - Bright Blue
+color13 = #{{base0E-hex}} # base0E - Bright Magenta
+color14 = #{{base0C-hex}} # base0C - Bright Cyan
+color15 = #{{base07-hex}} # base07 - Bright White
+color16 = #{{base09-hex}} # base09
+color17 = #{{base0F-hex}} # base0F
+color18 = #{{base01-hex}} # base01
+color19 = #{{base02-hex}} # base02
+color20 = #{{base04-hex}} # base04
+color21 = #{{base06-hex}} # base06
