--- a/templates/base24.mustache
+++ b/templates/base24.mustache
@@ -1,7 +1,7 @@
 [colors]
 # {{scheme-system}} {{scheme-name}}
 # Scheme author: {{scheme-author}}
-# Template author: Tinted Theming (https://github.com/tinted-theming)
+# Template author: Tinted Theming (https://github.com/tinted-theming/tinted-termite)
 
 foreground          = #{{base05-hex}}
 foreground_bold     = #{{base05-hex}}
@@ -9,9 +9,6 @@ cursor              = #{{base05-hex}}
 cursor_foreground   = #{{base00-hex}}
 background          = #{{base00-hex}}
 
-# 16 color space
-
-# Black, Gray, Silver, White
 color0  = #{{base00-hex}} # base00 - Black
 color1  = #{{base08-hex}} # base08 - Red
 color2  = #{{base0B-hex}} # base0B - Green
@@ -21,12 +18,12 @@ color5  = #{{base0E-hex}} # base0E - Magenta
 color6  = #{{base0C-hex}} # base0C - Cyan
 color7  = #{{base05-hex}} # base05 - White
 color8  = #{{base02-hex}} # base02 - Bright Black
-color9  = #{{base08-hex}} # base08 - Bright Red
-color10 = #{{base0B-hex}} # base0B - Bright Green
-color11 = #{{base0A-hex}} # base0A - Bright Yellow
-color12 = #{{base0D-hex}} # base0D - Bright Blue
-color13 = #{{base0E-hex}} # base0E - Bright Magenta
-color14 = #{{base0C-hex}} # base0C - Bright Cyan
+color9  = #{{base12-hex}} # base12 - Bright Red
+color10 = #{{base14-hex}} # base14 - Bright Green
+color11 = #{{base13-hex}} # base13 - Bright Yellow
+color12 = #{{base16-hex}} # base16 - Bright Blue
+color13 = #{{base17-hex}} # base17 - Bright Magenta
+color14 = #{{base15-hex}} # base15 - Bright Cyan
 color15 = #{{base07-hex}} # base07 - Bright White
 color16 = #{{base09-hex}} # base09
 color17 = #{{base0F-hex}} # base0F
